[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/hud/hud.png" type="Texture" id=1]
[ext_resource path="res://sprites/hud/hud_players.png" type="Texture" id=2]
[ext_resource path="res://objects/Hud.gd" type="Script" id=3]

[node name="Hud" type="Node2D"]
script = ExtResource( 3 )

[node name="TMP" type="Polygon2D" parent="."]
polygon = PoolVector2Array( 0, 0, 300, 0, 300, 100, 0, 100 )

[node name="FaceBg" type="Polygon2D" parent="."]
polygon = PoolVector2Array( 16, 0, 48, 0, 48, 32, 16, 32 )

[node name="FaceSprite" type="Sprite" parent="."]
position = Vector2( 16, 0 )
texture = ExtResource( 2 )
centered = false
hframes = 6

[node name="HpBar" type="Polygon2D" parent="."]

[node name="HudSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
